<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/water_cartoon">

        <Button
            android:id="@+id/startMacthButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/start_match_button"
            app:layout_constraintBottom_toTopOf="@+id/statButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.538" />

        <Button
            android:id="@+id/statButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/statistics_button"
            app:layout_constraintBottom_toTopOf="@id/changeUsernameButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startMacthButton" />

        <Button
            android:id="@+id/changeUsernameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/change_username_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>