<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/hostButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/host_match_text"
                app:layout_constraintBottom_toTopOf="@id/pager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/connectButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/connectButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/connect_text"
                app:layout_constraintBottom_toTopOf="@id/pager"
                app:layout_constraintLeft_toRightOf="@id/hostButton"
                app:layout_constraintRight_toLeftOf="@id/disconnectButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/disconnect_text"
                app:layout_constraintBottom_toTopOf="@id/pager"
                app:layout_constraintLeft_toRightOf="@id/connectButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/textview_time_passed"
                app:layout_constraintTop_toBottomOf="@id/connectButton" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/pager"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/textview_time_passed"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>